--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
     "next": "13.4.10",
     "postcss": "8.4.26",
